# ra2a

./: .gitignore  Cargo.toml  README.md
ra2a/: Cargo.toml
ra2a/examples/: bedrock.rs
ra2a/src/: lib.rs
ra2a/src/agent/: delegate.rs  error.rs  mod.rs  model.rs  service.rs
ra2a/src/broker/: service.rs
ra2a/src/client/: error.rs  mod.rs  service.rs
ra2a/src/client/grpc/: error.rs  service.rs
ra2a/src/client/jsonrpc/: error.rs  service.rs
ra2a/src/core/: error.rs  mod.rs  service.rs
ra2a/src/core/agent/: mod.rs  model.rs  test_utils.rs
ra2a/src/core/artifact/: model.rs
ra2a/src/core/message/: model.rs
ra2a/src/core/part/: model.rs
ra2a/src/core/push_notification/: model.rs
ra2a/src/core/role/: model.rs
ra2a/src/core/task/: model.rs
ra2a/src/core/util/: mod.rs  object.rs  role.rs  security_scheme.rs  string_list.rs  task.rs  timestamp.rs
ra2a/src/queue/: error.rs  mod.rs  service.rs
ra2a/src/queue/bounded/: service.rs
ra2a/src/server/: delegate.rs  error.rs  mod.rs  service.rs
ra2a/src/server/grpc/: delegate.rs  internal.rs  mod.rs  service.rs
ra2a/src/server/jsonrpc/: service.rs
ra2a/src/server/task/: service.rs
ra2a/src/store/: error.rs  mod.rs  service.rs
ra2a/src/store/memory/: service.rs
ra2a/tests/: common_workflow_examples.rs  grpc_e2e.rs  jsonrpc_e2e.rs  task_polling.rs
ra2a/tests/resources/: sample-agent-card.json
