[workspace]
resolver = "2"
members = ["ra2a"]

[workspace.dependencies]
async-trait = { version = "0.1" }
bytes = { version = "1" }
chrono = { version = "0.4" }
derive_builder = { version = "0.20" }
http = { version = "1" }
prost = { version = "0.14" }
prost-types = { version = "0.14" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = { version = "2" }
time = { version = "0.3", features = ["formatting", "parsing"] }
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
