[package]
name = "ra2a"
version = "0.1.0"
authors = ["stp041@gmail.com"]
edition = "2024"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
jsonrpsee = { workspace = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal"] }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
grpc = ["prost", "tonic"]
server = ["jsonrpsee/server", "tower-service"]