[package]
name = "ra2a"
version = "0.1.0"
authors = ["stp041@gmail.com"]
edition = "2024"

[dependencies]
aws-runtime = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-bedrockruntime = { workspace = true, optional = true }

async-trait = { workspace = true }
async-channel = { workspace = true, optional = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
jsonrpsee = { workspace = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal"] }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
indoc = { workspace = true }
tokio = { workspace = true }

[features]
grpc = ["prost", "tonic", "tonic-prost"]
agent = ["jsonrpsee/server", "async-channel"]
tmp = ["aws-runtime", "aws-config", "aws-sdk-bedrockruntime"]

[[example]]
name = "bedrock"
path = "examples/bedrock.rs"
required-features = ["agent", "grpc", "tmp"]